--- a/tensorboard/plugins/inference/tf_inference_dashboard/tf-inference-dashboard.html
+++ b/tensorboard/plugins/inference/tf_inference_dashboard/tf-inference-dashboard.html
@@ -290,22 +290,22 @@ TensorFlow run.
       }
       .checkbox {
         margin-top: 0px;
-        margin-left: 45px;
-        margin-right: 70px;
+        margin-left: 65px;
+        margin-right: 50px;
       }
       .table-content {
         width: 120px;
         margin-left: 1px;
         white-space:nowrap;
         overflow-x:auto;
+        text-align: center;
       }
       .table-title {
         width: 120px;
         height: 30px;
         border-bottom: 1px solid #bbbbbb;
         border-right: 1px solid #bbbbbb;
-        white-space:nowrap;
-        overflow-x:auto;
+        text-align: center;
       }
       .separator {
         margin-top: 30px;
